Some fixes in cmake
- "link" boost header-only targets
- link OgreOverlay

--- a/rl/engine/ai/CMakeLists.txt
+++ b/rl/engine/ai/CMakeLists.txt
@@ -58,7 +58,7 @@ src/OpenSteer/Vec3.cpp)
 
 ADD_LIBRARY(RlAi SHARED ${RlAi_LIB_SRCS})
 
-TARGET_LINK_LIBRARIES(RlAi ${OGRE_LIBRARIES} ${CEGUI_LIBRARIES} ${OGRENEWT_LIBRARIES} ${OPENSTEER_LIBRARY})
+TARGET_LINK_LIBRARIES(RlAi ${OGRE_LIBRARIES} ${CEGUI_LIBRARIES} ${OGRENEWT_LIBRARIES} ${OPENSTEER_LIBRARY} Boost::boost)
 
 SET_TARGET_PROPERTIES(RlAi PROPERTIES
 	VERSION ${RL_MAJOR_VERSION}.${RL_MINOR_VERSION}.${RL_PATCH_VERSION}
