--- a/rl/engine/common/CMakeLists.txt
+++ b/rl/engine/common/CMakeLists.txt
@@ -23,7 +23,7 @@ src/XmlResourceManager.cpp)
 
 ADD_LIBRARY(RlCommon SHARED ${RlCommon_LIB_SRCS})
 
-TARGET_LINK_LIBRARIES(RlCommon ${TINYXML2_LIBRARY} ${OGRE_LIBRARIES} ${CEGUI_LIBRARIES} ${Boost_FILESYSTEM_LIBRARY})
+TARGET_LINK_LIBRARIES(RlCommon ${TINYXML2_LIBRARY} ${OGRE_LIBRARIES} ${CEGUI_LIBRARIES} Boost::boost Boost::filesystem)
 
 SET_TARGET_PROPERTIES(RlCommon PROPERTIES
 	VERSION ${RL_MAJOR_VERSION}.${RL_MINOR_VERSION}.${RL_PATCH_VERSION}
