--- a/rl/engine/core/CMakeLists.txt
+++ b/rl/engine/core/CMakeLists.txt
@@ -93,7 +93,9 @@ ADD_DEFINITIONS(-DRL_MODULEDIR="${DATAROOTDIR}/${DATADIRNAME}")
 
 ADD_LIBRARY(RlCore SHARED ${RlCore_LIB_SRCS})
 
-TARGET_LINK_LIBRARIES(RlCore ${OGRE_LIBRARIES} ${CEGUI_LIBRARIES} ${OGRENEWT_LIBRARY} ${MESHMAGICK_LIBRARY} ${OIS_LIBRARIES} ${RUBY_LIBRARY})
+find_package(OGRE COMPONENTS OgreOverlay)
+
+TARGET_LINK_LIBRARIES(RlCore ${OGRE_LIBRARIES} ${CEGUI_LIBRARIES} ${OGRENEWT_LIBRARY} ${MESHMAGICK_LIBRARY} ${OIS_LIBRARIES} ${RUBY_LIBRARY} Boost::boost OgreOverlay)
 
 SET_TARGET_PROPERTIES(RlCore PROPERTIES
 	VERSION ${RL_MAJOR_VERSION}.${RL_MINOR_VERSION}.${RL_PATCH_VERSION}
