--- a/rl/engine/script/CMakeLists.txt
+++ b/rl/engine/script/CMakeLists.txt
@@ -39,7 +39,7 @@ src/TriggerFactory.cpp
 src/WaypointProcessor.cpp
 src/ZoneProcessor.cpp)
 
-SWIG_LINK_LIBRARIES(RlScript ${OGRE_LIBRARIES} ${CEGUI_LIBRARIES} ${OGRENEWT_LIBRARY} ${OIS_LIBRARIES} ${RUBY_LIBRARY})
+SWIG_LINK_LIBRARIES(RlScript ${OGRE_LIBRARIES} ${CEGUI_LIBRARIES} ${OGRENEWT_LIBRARY} ${OIS_LIBRARIES} ${RUBY_LIBRARY} Boost::boost)
 
 SET_TARGET_PROPERTIES(RlScript PROPERTIES
 	VERSION ${RL_MAJOR_VERSION}.${RL_MINOR_VERSION}.${RL_PATCH_VERSION}
