--- a/rl/engine/ui/CMakeLists.txt
+++ b/rl/engine/ui/CMakeLists.txt
@@ -68,7 +68,7 @@ src/WindowManager.cpp)
 
 ADD_LIBRARY(RlUi SHARED ${RlUi_LIB_SRCS})
 
-TARGET_LINK_LIBRARIES(RlUi ${OGRE_LIBRARIES} ${OIS_LIBRARIES} ${CEGUI_LIBRARIES} ${CEGUIOGRE_LIBRARY} ${OGRENEWT_LIBRARY} ${RUBY_LIBRARY})
+TARGET_LINK_LIBRARIES(RlUi ${OGRE_LIBRARIES} ${OIS_LIBRARIES} ${CEGUI_LIBRARIES} ${CEGUIOGRE_LIBRARY} ${OGRENEWT_LIBRARY} ${RUBY_LIBRARY} Boost::boost)
 
 SET_TARGET_PROPERTIES(RlUi PROPERTIES
 	VERSION ${RL_MAJOR_VERSION}.${RL_MINOR_VERSION}.${RL_PATCH_VERSION}
