--- a/rl/engine/rules/CMakeLists.txt
+++ b/rl/engine/rules/CMakeLists.txt
@@ -77,7 +77,7 @@ src/WalkMovement.cpp)
 
 ADD_LIBRARY(RlRules SHARED ${RlRules_LIB_SRCS})
 
-TARGET_LINK_LIBRARIES(RlRules ${OGRE_LIBRARIES} ${CEGUI_LIBRARIES} ${OGRENEWT_LIBRARY})
+TARGET_LINK_LIBRARIES(RlRules ${OGRE_LIBRARIES} ${CEGUI_LIBRARIES} ${OGRENEWT_LIBRARY} Boost::boost)
 
 SET_TARGET_PROPERTIES(RlRules PROPERTIES
 	VERSION ${RL_MAJOR_VERSION}.${RL_MINOR_VERSION}.${RL_PATCH_VERSION}
